K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformsservice
  template:
    metadata:
      labels:
        app: platformsservice
    spec:
      containers:
      - name: platformsservice
        image: kotzakhar/platformsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformsservice
  ports:
    - name: platformsservice
      protocol: TCP
      port: 80
      targetPort: 80
